Bug 313892 - Network interface doesn't show ipv6 information
Summary: Network interface doesn't show ipv6 information
Status: RESOLVED FIXED
Alias: None
Product: kinfocenter
Classification: Applications
Component: Network Interfaces (other bugs)
Version First Reported In: 4.9.98 RC3
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: David Hubner
URL:
Keywords:
: 295909 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-01-25 18:02 UTC by Bruno Friedmann
Modified: 2020-01-31 15:12 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.18.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bruno Friedmann 2013-01-25 18:02:47 UTC
ip addr show full information
1: lo: <LOOPBACK,UP,LOWER_UP> mtu 65536 qdisc noqueue state UNKNOWN 
    link/loopback 00:00:00:00:00:00 brd 00:00:00:00:00:00
    inet 127.0.0.1/8 scope host lo
    inet6 ::1/128 scope host 
       valid_lft forever preferred_lft forever
2: eth0: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 1500 qdisc mq state UP qlen 1000
    link/ether 00:22:19:f6:4e:5d brd ff:ff:ff:ff:ff:ff
    inet 10.26.8.50/25 brd 10.26.8.127 scope global eth0
    inet6 2001:1620:f7c:0:222:19ff:fef6:4e5d/64 scope global dynamic 
       valid_lft 86396sec preferred_lft 14396sec
    inet6 fdbe:6700:7a47:1:222:19ff:fef6:4e5d/64 scope global dynamic 
       valid_lft 86396sec preferred_lft 14396sec
    inet6 fe80::222:19ff:fef6:4e5d/64 scope link 
       valid_lft forever preferred_lft forever
3: wlan0: <BROADCAST,MULTICAST> mtu 1500 qdisc noop state DOWN qlen 1000
    link/ether 00:1c:bf:33:06:f6 brd ff:ff:ff:ff:ff:ff
network interfaces show only ipv4 informations ipv6 should be shown also


Reproducible: Always

Steps to Reproduce:
1. Get ipv6 working
2. open kinfocenter
3. Network interfaces 
Actual Results:  
no ipv6 is shown

Expected Results:  
ipv6 information should be there
Comment 1 Christoph Feck 2013-12-29 19:11:12 UTC
*** Bug 295909 has been marked as a duplicate of this bug. ***
Comment 2 johan.claudebreuninger 2017-11-02 12:19:57 UTC
I can confirm this under Kinfocenter 5.11.2.
Comment 3 Harald Sitter 2020-01-31 15:12:41 UTC
Git commit 4582053b7cac596e6987a8ff460ffe7fb153155b by Harald Sitter.
Committed on 31/01/2020 at 15:11.
Pushed by sitter into branch 'Plasma/5.18'.

do not disable getifaddrs use because of sa_len availablility

Summary:
this fixes ipv6 support in nic listing. well, kinda.

the getifaddrs branch is the only one supporting ipv6 properly
so it seems silly to use the ioctl branch just because sa_len
is not available.
simply wrap around getnameinfo and either use sa_len or
determine the length based on the socket family (as seen on the
getifaddrs manpage). this way the branch compiles fine without
sa_len and is fine to use by just about all glibc systems thus
giving us ipv6 support on just about every glib system.
Related: bug 277208
FIXED-IN: 5.18.0

Test Plan: built on neon. shows ipv6 addresses

Reviewers: ngraham

Reviewed By: ngraham

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D26729

M  +25   -14   Modules/nics/nic.cpp

https://commits.kde.org/kinfocenter/4582053b7cac596e6987a8ff460ffe7fb153155b