do not disable getifaddrs use because of sa_len availablility

Summary:
this fixes ipv6 support in nic listing. well, kinda.

the getifaddrs branch is the only one supporting ipv6 properly
so it seems silly to use the ioctl branch just because sa_len
is not available.
simply wrap around getnameinfo and either use sa_len or
determine the length based on the socket family (as seen on the
getifaddrs manpage). this way the branch compiles fine without
sa_len and is fine to use by just about all glibc systems thus
giving us ipv6 support on just about every glib system.

BUG: 313892
BUG: 277208
FIXED-IN: 5.18.0

Test Plan: built on neon. shows ipv6 addresses

Reviewers: ngraham

Reviewed By: ngraham

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D26729